# weather-data-etl

./: .env.exemple  .env.prod.exemple  .gitignore  Dockerfile  README.md  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml
dbt_transformation/: .user.yml  profiles.yml
dbt_transformation/models/marts/: dim_stations.sql  dim_time.sql  dim_wind.sql  fact_weather.sql  marts_weather.yml
dbt_transformation/models/staging/: src_weather.yml  stg_data_info_climat.sql  stg_data_weather_u_be.sql  stg_data_weather_u_fr.sql  stg_metadata_info_climat.sql  stg_stations_info_climat.sql  stg_stations_weather_u.sql  stg_weather.yml
src/: main.py
src/ingestion/: file_connector.py  info_climat.py  postgres_connector.py  weather_underground.py
