[project]
name = "weather-data-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "Nassanalytics",email = "nassim.naoui@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas (>=1.5.3,<3.0)",
    "airbyte (>=0.44.0,<0.45.0)",
    "dbt-postgres (>=1.10.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
